# nada-data

./: .gitignore  .pylintrc  LICENSE  README.md  README.rst  pyproject.toml
docs/: conf.py  toc.rst
docs/_source/: nada-data.array.rst  nada-data.rst  nada-data.table.rst  nada-data.utils.rst
src/nada_data/: __init__.py  basic_ops.py  nada_array.py  nada_filter.py  nada_sum.py  nada_table.py  utils.py
src/nada_data/array/: __init__.py  arithmetic.py  filter.py  nada_array.py  sort.py
src/nada_data/array/functions/: __init__.py  arithmetic.py  filter.py  sort.py
src/nada_data/functions/: __init__.py  utils.py
src/nada_data/functions/array/: __init__.py  arithmetic.py  filter.py  sort.py
src/nada_data/functions/table/: __init__.py  agg.py  sort.py
src/nada_data/table/: __init__.py  nada_table.py  sort.py
src/nada_data/table/functions/: __init__.py  agg.py  sort.py
test/: test_basic_ops.py  test_nada_array.py  test_nada_table.py  test_sum.py
test/test_functions/test_array/: test_arithmetic.py  test_filter.py  test_sort.py
tests/: test_nada_array.py  test_nada_table.py  test_utils.py  utils.py
tests/test_array/: test_nada_array.py
tests/test_array/test_functions/: test_arithmetic.py  test_filter.py  test_sort.py
tests/test_functions/: test_utils.py
tests/test_functions/test_array/: test_arithmetic.py  test_filter.py  test_sort.py
tests/test_functions/test_table/: test_agg.py  test_sort.py
tests/test_table/: test_nada_table.py
tests/test_table/test_functions/: test_agg.py  test_sort.py
